--- a/task_v1.html
+++ b/task_v1.html
@@ -30,6 +30,7 @@
 
     .header h1, .header h2 {
       margin: 0;
+      margin-top: 10px; /* Adjusted margin-top to move titles a bit lower */
     }
 
     .left {
@@ -126,15 +127,13 @@
         </article>
       </div>
     </div>
-    <div class="right">
-      <div class="days-of-week">
-        <div class="day">Monday</div>
-        <div class="day">Tuesday</div>
-        <div class="day">Wednesday</div>
-        <div class="day">Thursday</div>
-        <div class="day">Friday</div>
-        <div class="day">Saturday / Sunday</div>
-      </div>
+    <div class="days-of-week">
+      <div class="day">Monday</div>
+      <div class="day">Tuesday</div>
+      <div class="day">Wednesday</div>
+      <div class="day">Thursday</div>
+      <div class="day">Friday</div>
+      <div class="day">Saturday / Sunday</div>
     </div>
   </div>
 </body>
