--- a/task_v1.html
+++ b/task_v1.html
@@ -37,6 +37,7 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
+      flex: 1; /* Added flex property to stretch the left side */
     }
 
     .article-container {
@@ -81,6 +82,7 @@
       display: grid;
       grid-template-rows: repeat(4, 1fr);
       grid-gap: 3px;
+      flex: 1; /* Added flex property to stretch the right side */
     }
 
   </style>
