--- a/task_v1.html
+++ b/task_v1.html
@@ -22,8 +22,6 @@
 
     .container {
       height: 100vh;
-      grid-gap: 10px;
-      grid-area: 1 / 1 / 2 / 3;
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr;
@@ -38,6 +36,7 @@
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
+      margin: 0; /* Removed margin */
     }
 
     .header h1, .header h2 {
