--- a/task_v1.html
+++ b/task_v1.html
@@ -41,7 +41,7 @@
 
     .header h1, .header h2 {
       margin: 0;
-      margin-top: 100px; /* Adjusted margin-top to move titles a bit lower */
+      margin-top: 10px; /* Adjusted margin-top */
     }
 
     .left {
@@ -55,7 +55,6 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: calc(100% - 40px);
     }
 
     .section-title {
