--- a/task_v1.html
+++ b/task_v1.html
@@ -36,12 +36,11 @@
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
-      margin: 0; /* Removed margin */
+      margin-bottom: 10px; /* Adjusted margin-bottom */
     }
 
     .header h1, .header h2 {
       margin: 0;
-      margin-top: 10px; /* Adjusted margin-top */
     }
 
     .left {
