--- a/task_v1.html
+++ b/task_v1.html
@@ -36,11 +36,12 @@
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
-      margin-bottom: 10px; /* Adjusted margin-bottom */
+      margin: 0; /* Removed margin */
     }
 
     .header h1, .header h2 {
       margin: 0;
+      margin-top: 100px; /* Adjusted margin-top to move titles a bit lower */
     }
 
     .left {
@@ -54,6 +55,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      height: calc(100% - 40px);
     }
 
     .section-title {
@@ -75,6 +77,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      height: 100vh; /* Adjusted height to match the right side */
     }
 
     .day {
