--- a/task_v1.html
+++ b/task_v1.html
@@ -41,7 +41,7 @@
 
     .header h1, .header h2 {
       margin: 0;
-      margin-top: 100px; /* Adjusted margin-top to move titles a bit lower */
+      margin-top: 50px; /* Adjusted margin-top */
     }
 
     .left {
@@ -49,6 +49,7 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
+      max-width: 300px; /* Adjusted maximum width */
     }
 
     .article-container {
