--- a/task_v1.html
+++ b/task_v1.html
@@ -50,6 +50,7 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px; /* Adjusted maximum width */
+      height: 100%; /* Added height to fill the container */
     }
 
     .article-container {
