--- a/task_v1.html
+++ b/task_v1.html
@@ -57,6 +57,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      flex: 1; /* Added flex property to fill available space */
     }
 
     .section-title {
@@ -95,6 +96,7 @@
       display: grid;
       grid-template-rows: repeat(4, 1fr);
       grid-gap: 3px;
+      height: 100%; /* Adjusted height to fill the container */
     }
   </style>
 </head>
