--- a/task_v1.html
+++ b/task_v1.html
@@ -14,7 +14,7 @@
       padding: 0;
       display: grid;
       grid-template-columns: auto 1fr;
-      grid-template-rows: auto;
+      grid-template-rows: auto 1fr;
       grid-template-areas:
         "header header"
         "left right";
@@ -50,12 +50,14 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
+      height: 100%; /* Ensure the left side covers the entire height */
     }
 
     .article-container {
       display: grid;
       grid-template-rows: auto 1fr auto; /* Adjusted grid-template-rows */
       gap: 10px; /* Added gap for better spacing */
+      height: 100%; /* Ensure .article-container covers the entire height */
     }
 
     .section-title {
@@ -94,6 +96,7 @@
       display: grid;
       grid-template-rows: repeat(4, 1fr);
       grid-gap: 3px;
+      height: 100%; /* Ensure .weekly-plan covers the entire height */
     }
   </style>
 </head>
