--- a/task_v1.html
+++ b/task_v1.html
@@ -21,7 +21,7 @@
     }
 
     .container {
-      height: 100vh;
+      min-height: 100vh;
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr;
@@ -50,7 +50,6 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
-      height: 100%;
     }
 
     .article-container {
@@ -79,7 +78,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      height: 100vh;
+      height: 100%;
     }
 
     .day {
