--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v4.css">
+  <link rel="stylesheet" href="styles_v5.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -21,7 +21,7 @@
     }
 
     .container {
-      min-height: 100vh;
+      height: 100vh;
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr;
@@ -78,7 +78,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      height: 100%;
+      height: 100vh;
     }
 
     .day {
