--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v4.css">
+  <link rel="stylesheet" href="styles_v8.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -14,19 +14,29 @@
       padding: 0;
       display: grid;
       grid-template-columns: auto 1fr;
+      grid-template-rows: auto 1fr;
+      grid-template-areas:
+        "header header"
+        "left right";
     }
 
     .container {
       height: 100vh;
       display: grid;
       grid-template-columns: auto 1fr;
+      grid-template-rows: auto 1fr;
+      grid-template-areas:
+        "header header"
+        "left right";
     }
 
     .header {
+      grid-area: header;
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
+      margin: 0;
     }
 
     .header h1, .header h2 {
@@ -35,18 +45,20 @@
     }
 
     .left {
+      grid-area: left;
       display: flex;
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
       height: 100%;
+      overflow: auto; /* Add overflow property for scrolling */
     }
 
     .article-container {
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      flex: 1;
+      justify-content: space-between;
+      height: 100%;
     }
 
     .section-title {
@@ -64,9 +76,11 @@
     }
 
     .days-of-week {
+      grid-area: right;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      height: 100%;
     }
 
     .day {
@@ -80,10 +94,11 @@
     }
 
     .weekly-plan {
-      display: grid;
-      grid-template-rows: auto auto auto 1fr;
-      gap: 3px;
-      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      overflow: auto; /* Add overflow property for scrolling */
     }
   </style>
 </head>
