--- a/task_v1.html
+++ b/task_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE-edges">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles_v8.css">
+  <link rel="stylesheet" href="styles_v9.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=YourCustomFont" rel="stylesheet">
   <style>
@@ -33,15 +33,15 @@
     .header {
       grid-area: header;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      justify-content: flex-start;
       align-items: flex-start;
       padding: 10px;
       margin: 0;
     }
 
-    .header h1, .header h2 {
-      margin: 0;
-      margin-top: 50px;
+    .header h1 {
+      margin-bottom: 10px;
     }
 
     .left {
@@ -51,7 +51,7 @@
       padding: 10px;
       max-width: 300px;
       height: 100%;
-      overflow: auto; /* Add overflow property for scrolling */
+      overflow: auto;
     }
 
     .article-container {
@@ -98,7 +98,7 @@
       flex-direction: column;
       justify-content: space-between;
       height: 100%;
-      overflow: auto; /* Add overflow property for scrolling */
+      overflow: auto;
     }
   </style>
 </head>
@@ -108,7 +108,7 @@
       <h1>PLAN WEEKLY</h1>
       <h2>Week Of</h2>
       <h2>Healthy Habit</h2>
-      <h2>Room for Improvement</h2>
+      <h2 style="margin-bottom: 10px;">Room for Improvement</h2>
       <h2>Rocked It</h2>
     </div>
     <div class="left">
