--- a/task_v1.html
+++ b/task_v1.html
@@ -12,19 +12,13 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      display: grid;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: auto 1fr;
-      grid-template-areas:
-        "header header"
-        "left right";
     }
 
-    .container {
-      height: 100vh;
+    body {
+      font-family: 'YourCustomFont', sans-serif;
       display: grid;
-      grid-template-columns: auto 1fr;
-      grid-template-rows: auto 1fr;
+      grid-template-columns: 450px 1fr;
+      grid-template-rows: 160px 1fr;
       grid-template-areas:
         "header header"
         "left right";
@@ -53,7 +47,7 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
-      max-width: 300px;
+      max-width: 450px;
       height: 100%;
       overflow: auto;
     }
@@ -107,55 +101,53 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="header">
-      <h1>PLAN WEEKLY</h1>
-      <h2>Week Of</h2>
-      <h2>Healthy Habit</h2>
-      <h2>Room for Improvement</h2>
-      <h2>Rocked It</h2>
+  <div class="header">
+    <h1>PLAN WEEKLY</h1>
+    <h2>Week Of</h2>
+    <h2>Healthy Habit</h2>
+    <h2>Room for Improvement</h2>
+    <h2>Rocked It</h2>
+  </div>
+  <div class="left">
+    <div class="article-container">
+      <article class="weekly-plan">
+        <section>
+          <h2 class="section-title">Top 3 Goals</h2>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+        </section>
+        <section>
+          <h2 class="section-title">Everything Else</h2>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <!-- Repeat for additional lines -->
+        </section>
+        <section>
+          <h2 class="section-title">Next Week</h2>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+          <textarea class="text-input" rows="1" type="text"></textarea>
+        </section>
+      </article>
     </div>
-    <div class="left">
-      <div class="article-container">
-        <article class="weekly-plan">
-          <section>
-            <h2 class="section-title">Top 3 Goals</h2>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-          </section>
-          <section>
-            <h2 class="section-title">Everything Else</h2>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <!-- Repeat for additional lines -->
-          </section>
-          <section>
-            <h2 class="section-title">Next Week</h2>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-            <textarea class="text-input" rows="1" type="text"></textarea>
-          </section>
-        </article>
-      </div>
-    </div>
-    <div class="days-of-week">
-      <div class="day">Monday</div>
-      <div class="day">Tuesday</div>
-      <div class="day">Wednesday</div>
-      <div class="day">Thursday</div>
-      <div class="day">Friday</div>
-      <div class="day">Saturday / Sunday</div>
-    </div>
+  </div>
+  <div class="days-of-week">
+    <div class="day">Monday</div>
+    <div class="day">Tuesday</div>
+    <div class="day">Wednesday</div>
+    <div class="day">Thursday</div>
+    <div class="day">Friday</div>
+    <div class="day">Saturday / Sunday</div>
   </div>
 </body>
 </html>
