--- a/task_v1.html
+++ b/task_v1.html
@@ -32,10 +32,11 @@
       align-items: flex-start;
       padding: 10px;
       margin: 0;
+      border-bottom: 2px solid #000; /* Added border-bottom */
     }
 
     .header h1 {
-      margin-right: 20px; /* Adjusted margin for separation */
+      margin-right: 20px;
     }
 
     .header h2 {
@@ -50,6 +51,7 @@
       max-width: 450px;
       height: 100%;
       overflow: auto;
+      border-right: 2px solid #000; /* Added border-right */
     }
 
     .article-container {
