--- a/task_v1.html
+++ b/task_v1.html
@@ -32,11 +32,11 @@
       align-items: flex-start;
       padding: 10px;
       margin: 0;
-      border-bottom: 2px solid #000; /* Added border-bottom */
+      border-bottom: 1px solid #000; /* Added border-bottom */
     }
 
     .header h1 {
-      margin-right: 20px;
+      margin-right: 20px; /* Adjusted margin for separation */
     }
 
     .header h2 {
@@ -51,7 +51,7 @@
       max-width: 450px;
       height: 100%;
       overflow: auto;
-      border-right: 2px solid #000; /* Added border-right */
+      border-right: 1px solid #000; /* Added border-right */
     }
 
     .article-container {
