--- a/task_v1.html
+++ b/task_v1.html
@@ -19,13 +19,10 @@
       display: grid;
       grid-template-columns: 450px 1fr;
       grid-template-rows: 160px 1fr;
-      grid-template-areas:
-        "header header"
-        "left right";
     }
 
     .container {
-      height: 100%;
+      height: 100vh;
       display: grid;
       grid-template-columns: 450px 1fr;
       grid-template-rows: 160px 1fr;
@@ -33,7 +30,7 @@
     }
 
     .header {
-      grid-area: header;
+      grid-column: span 2;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -52,7 +49,6 @@
     }
 
     .left {
-      grid-area: left;
       display: flex;
       flex-direction: column;
       padding: 10px;
@@ -84,11 +80,9 @@
     }
 
     .days-of-week {
-      grid-area: right;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      height: 100%;
     }
 
     .day {
