--- a/task_v1.html
+++ b/task_v1.html
@@ -40,6 +40,7 @@
       align-items: flex-start;
       padding: 10px;
       margin: 0;
+      border-bottom: 1px solid #000;
     }
 
     .header h1 {
