--- a/task_v1.html
+++ b/task_v1.html
@@ -59,6 +59,7 @@
       max-width: 450px;
       height: 100%;
       overflow: auto;
+      border-right: 1px solid #ddd;
     }
 
     .article-container {
@@ -87,6 +88,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      height: 100%;
     }
 
     .day {
