--- a/task_v1.html
+++ b/task_v1.html
@@ -12,12 +12,18 @@
       height: 100%;
       margin: 0;
       padding: 0;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-rows: auto 1fr;
+      grid-template-areas:
+        "header header"
+        "left right";
     }
 
-    body {
-      font-family: 'YourCustomFont', sans-serif;
+    .container {
+      height: 100vh;
       display: grid;
-      grid-template-columns: 450px 1fr;
+      grid-template-columns: auto 1fr;
       grid-template-rows: auto 1fr;
       grid-template-areas:
         "header header"
@@ -27,20 +33,15 @@
     .header {
       grid-area: header;
       display: flex;
-      flex-direction: row;
       justify-content: space-between;
       align-items: flex-start;
       padding: 10px;
       margin: 0;
-      border-bottom: 1px solid #ccc; /* Added gray border */
     }
 
-    .header h1 {
-      margin-right: 20px; /* Adjusted margin for separation */
-    }
-
-    .header h2 {
+    .header h1, .header h2 {
       margin: 0;
+      margin-top: 50px;
     }
 
     .left {
@@ -48,17 +49,14 @@
       display: flex;
       flex-direction: column;
       padding: 10px;
-      max-width: 450px;
-      height: 100%;
-      overflow: auto;
-      border-right: 1px solid #ccc; /* Added gray border */
+      max-width: 300px;
     }
 
     .article-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
+      display: grid;
+      grid-template-rows: auto auto auto; /* Adjusted grid-template-rows */
+      gap: 10px; /* Added gap for better spacing */
+      height: 100%; /* Ensure .article-container covers the entire height */
     }
 
     .section-title {
@@ -80,6 +78,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
+      height: 100vh;
     }
 
     .day {
@@ -93,62 +92,63 @@
     }
 
     .weekly-plan {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
-      overflow: auto;
+      display: grid;
+      grid-template-rows: auto auto auto; /* Adjusted grid-template-rows */
+      grid-gap: 3px;
+      height: 100%; /* Ensure .weekly-plan covers the entire height */
     }
   </style>
 </head>
 <body>
-  <div class="header">
-    <h1>PLAN WEEKLY</h1>
-    <h2>Week Of</h2>
-    <h2>Healthy Habit</h2>
-    <h2>Room for Improvement</h2>
-    <h2>Rocked It</h2>
-  </div>
-  <div class="left">
-    <div class="article-container">
-      <article class="weekly-plan">
-        <section>
-          <h2 class="section-title">Top 3 Goals</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-        <section>
-          <h2 class="section-title">Everything Else</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <!-- Repeat for additional lines -->
-        </section>
-        <section>
-          <h2 class="section-title">Next Week</h2>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-          <textarea class="text-input" rows="1" type="text"></textarea>
-        </section>
-      </article>
+  <div class="container">
+    <div class="header">
+      <h1>PLAN WEEKLY</h1>
+      <h2>Week Of</h2>
+      <h2>Healthy Habit</h2>
+      <h2>Room for Improvement</h2>
+      <h2>Rocked It</h2>
     </div>
-  </div>
-  <div class="days-of-week">
-    <div class="day">Monday</div>
-    <div class="day">Tuesday</div>
-    <div class="day">Wednesday</div>
-    <div class="day">Thursday</div>
-    <div class="day">Friday</div>
-    <div class="day">Saturday / Sunday</div>
+    <div class="left">
+      <div class="article-container">
+        <article class="weekly-plan">
+          <section>
+            <h2 class="section-title">Top 3 Goals</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+          <section>
+            <h2 class="section-title">Everything Else</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <!-- Repeat for additional lines -->
+          </section>
+          <section>
+            <h2 class="section-title">Next Week</h2>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+            <textarea class="text-input" rows="1" type="text"></textarea>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="days-of-week">
+      <div class="day">Monday</div>
+      <div class="day">Tuesday</div>
+      <div class="day">Wednesday</div>
+      <div class="day">Thursday</div>
+      <div class="day">Friday</div>
+      <div class="day">Saturday / Sunday</div>
+    </div>
   </div>
 </body>
 </html>
