--- a/task_v1.html
+++ b/task_v1.html
@@ -20,6 +20,10 @@
         "left right";
     }
 
+    body {
+      font-family: 'YourCustomFont', sans-serif;
+    }
+
     .container {
       height: 100vh;
       display: grid;
@@ -50,6 +54,7 @@
       flex-direction: column;
       padding: 10px;
       max-width: 300px;
+      height: 100%; /* Set height to 100% to cover the entire height */
     }
 
     .article-container {
@@ -78,7 +83,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      height: 100vh;
+      height: 100%;
     }
 
     .day {
