--- a/index.html
+++ b/index.html
@@ -1,27 +1,128 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website - [Student Name]</title>
+    <title>Personal Website - [Denis Dalkevich]</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        th, td {
-            border: 1px solid #ccc;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
+        body {
+            font-family: Arial, Helvetica, sans-serif;
             background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
         }
+
+        /* Center the form on the page */
+        form {
+            width: 80%;
+            max-width: 400px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Style headings */
+        h1 {
+            text-align: center;
+        }
+
+        /* Style form fields and labels */
+        div {
+            margin-bottom: 15px;
+        }
+
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        input[type="date"],
+        select {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        /* Style the submit button */
+        input[type="submit"] {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+
+        /* Style the link to the lab document */
+        a {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+        }
+
+        /* Center the link */
+        p {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        /* Additional styles provided */
+        .home-child,
+        .home-item {
+            position: absolute;
+            top: 223px;
+            left: 755px;
+            border-radius: 50%;
+            background-color: var(--color-aliceblue);
+            width: 243px;
+            height: 243px;
+        }
+
+        .home-item {
+            top: 477px;
+            left: 148px;
+            border-radius: 2px;
+            background-color: var(--primary);
+            width: 208px;
+            height: 47px;
+        }
+
+        .hi-i-am-container {
+            position: absolute;
+            left: 148px;
+            display: inline-block;
+            margin: 0;
+            top: 228px;
+            font-size: 44px;
+            line-height: 60px;
+            font-weight: 700;
+            font-family: inherit;
+            width: 506px;
+            height: 105px;
+        }
+
+        /* Add more styles for other classes and elements as needed */
+
     </style>
 </head>
 <body>
+    <!-- Your existing HTML content goes here -->
+
     <!-- Navigation Menu -->
     <nav>
         <ul>
