--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website - [Denis Dalkevich]</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
