--- a/index.html
+++ b/index.html
@@ -134,12 +134,22 @@
         </ul>
     </nav>
 
-    <!-- Page Title -->
-    <header>
-        <h1>Personal Website</h1>
-        <h2>[Denis Dalkevich]</h2>
-    </header>
-
+        <!-- Page Title -->
+    <h1 class="hi-i-am-container">
+        <p class="hi-i-am">Hi, I am John,</p>
+        <p class="hi-i-am">Creative Technologist</p>
+    </h1>
+    <div class="amet-minim-mollit">
+        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+        sint. Velit officia consequat duis enim velit mollit. Exercitation
+        veniam consequat sunt nostrud amet.
+    </div>
+    <button class="works">Works</button>
+    <div class="blog">Blog</div>
+    <div class="contact">Contact</div>
+    <div class="download-resume">Download Resume</div>
+    <img class="home-inner" alt="" src="./public/ellipse-https://i.redd.it/g4fm789q2cc11.jpg" />
+    
     <!-- About Me Section -->
     <section id="about-me">
         <h2>About Me</h2>
@@ -148,7 +158,7 @@
             <p>Username: [XxXben228XxX]</p>
         </div>
     </section>
-
+    
     <!-- Practical Works Section -->
     <section id="practical-works">
         <h2>Practical Works</h2>
