--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div class="blog">Blog</div>
     <div class="contact">Contact</div>
     <div class="download-resume">Download Resume</div>
-    <img class="home-inner" alt="" src="./public/ellipse-https://i.redd.it/g4fm789q2cc11.jpg" />
+    <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg" />
     
     <!-- About Me Section -->
     <section id="about-me">
