--- a/index.html
+++ b/index.html
@@ -135,23 +135,21 @@
     </nav>
 
         <!-- Page Title -->
-    <h1 class="hi-i-am-container">
-        <p class="hi-i-am">Hi, I am John,</p>
-        <p class="hi-i-am">Creative Technologist</p>
-    </h1>
-    <div class="amet-minim-mollit">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim velit mollit. Exercitation
-        veniam consequat sunt nostrud amet.
-    </div>
-    <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg" />
-    
-    <!-- About Me Section -->
+   <!-- About Me Section -->
     <section id="about-me">
         <h2>About Me</h2>
         <div>
-            <img src="student-photo.jpg" alt="[Denis Dalkevich]">
+            <img class="home-inner" alt="" src="https://i.redd.it/g4fm789q2cc11.jpg">
             <p>Username: [XxXben228XxX]</p>
+        </div>
+        <h1 class="hi-i-am-container">
+            <p class="hi-i-am">Hi, I am John,</p>
+            <p class="hi-i-am">Creative Technologist</p>
+        </h1>
+        <div class="amet-minim-mollit">
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet.
         </div>
     </section>
     
