--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
             width: 506px;
             height: 105px;
         }
+                .home-inner {
+          position: absolute;
+          top: 210px;
+          left: 760px;
+          border-radius: 50%;
+          width: 243px;
+          height: 243px;
+          object-fit: cover;
+        }
 
         /* Add more styles for other classes and elements as needed */
 
