--- a/index.html
+++ b/index.html
@@ -103,17 +103,26 @@
         }
 
         .hi-i-am-container {
-            position: absolute;
-            left: 148px;
-            display: inline-block;
+            position: relative; /* Change to relative */
+            text-align: center; /* Center text within the container */
+            margin: 0 auto; /* Center the container horizontally */
+            max-width: 506px; /* Set a maximum width */
+        }
+
+        .hi-i-am {
             margin: 0;
-            top: 228px;
             font-size: 44px;
             line-height: 60px;
             font-weight: 700;
             font-family: inherit;
-            width: 506px;
-            height: 105px;
+        }
+
+        .amet-minim-mollit {
+            margin: 0;
+            font-size: 16px;
+            line-height: 1.5;
+            max-width: 600px; /* Set a maximum width */
+            margin: 20px auto; /* Center the container horizontally */
         }
                 .home-inner {
           position: absolute;
