--- a/index.html
+++ b/index.html
@@ -128,18 +128,17 @@
         .home-inner {
             position: relative;
             width: 150px; /* Adjust the width as needed */
-            height: 150px; /* Set the height to match the width for a perfect circle */
+            height: 75px; /* Set half of the width to create a semicircle */
             margin: 20px auto; /* Center the image horizontally */
-            border-radius: 50%;
             overflow: hidden; /* Clip the image to the border-radius */
         }
 
         .home-inner img {
             width: 100%; /* Make the image fill the container */
             height: auto; /* Maintain the aspect ratio */
+            border-radius: 50% 50% 0 0; /* Create a semicircle effect */
             object-fit: cover; /* Cover the container without stretching */
         }
-
         /* Add more styles for other classes and elements as needed */
 
     </style>
