--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
 
         .home-inner {
             position: relative;
-            width: 150px; /* Adjust the width as needed for a circle */
-            height: 150px; /* Set the height equal to the width for a circle */
+            width: 243px; /* Adjust the width as needed for a circle */
+            height: 243px; /* Set the height equal to the width for a circle */
             margin: 20px auto; /* Center the image horizontally */
             overflow: hidden; /* Clip the image to the border-radius */
-            border-radius: 100%; /* Create a circle */
+            border-radius: 50%;
+            object-fit: cover;
         }
 
         .home-inner img {
