--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
     <!-- Footer Section -->
     <div class="footer">
         <div class="footer-child"></div>
-        <img class="fb-icon" alt="" src="./public/fb.svg" />
-        <img class="linkedin-icon" alt="" src="./public/linkedin.svg" />
-        <img class="group-icon" alt="" src="./public/group.svg" />
-        <img class="insta-icon" alt="" src="./public/insta.svg" />
+        <img class="fb-icon" alt="" src="https://image.pngaaa.com/632/6536632-middle.png" />
+        <img class="linkedin-icon" alt="" src="https://w7.pngwing.com/pngs/676/231/png-transparent-reddit-social-media-internet-news-social-media-iconez-icon.png" />
+        <img class="group-icon" alt="" src="https://d2xo500swnpgl1.cloudfront.net/uploads/roblox/Roblox-Tilt-Primary-1--79c6a905-f484-4d35-9675-0ccd03548cc5-1680045036103.png" />
+        <img class="insta-icon" alt="" src="https://cdn.iconscout.com/icon/free/png-256/free-steam-2288551-1933796.png" />
         <div class="copyright-2020-all">
-            Copyright ©2020 All rights reserved
+            Copyright ©2023 All rights reserved
         </div>
     </div>
 </body>
