--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <!-- Footer Section -->
     <div class="footer">
         <div class="footer-child"></div>
-        <img class="fb-icon" alt="" src="https://image.pngaaa.com/632/6536632-middle.png" />
+        <img class="fb-icon" alt="" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" />
         <img class="linkedin-icon" alt="" src="https://w7.pngwing.com/pngs/676/231/png-transparent-reddit-social-media-internet-news-social-media-iconez-icon.png" />
         <img class="group-icon" alt="" src="https://d2xo500swnpgl1.cloudfront.net/uploads/roblox/Roblox-Tilt-Primary-1--79c6a905-f484-4d35-9675-0ccd03548cc5-1680045036103.png" />
         <img class="insta-icon" alt="" src="https://cdn.iconscout.com/icon/free/png-256/free-steam-2288551-1933796.png" />
