--- a/index.html
+++ b/index.html
@@ -143,9 +143,6 @@
         
         /* Updated styles for the footer */
         .footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
             width: 100%;
             background-color: var(--color-white);
             text-align: center;
@@ -154,6 +151,9 @@
             justify-content: center;
             align-items: center;
             padding: 10px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
         }
 
         .footer-child {
