--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
             object-fit: cover; /* Cover the container without stretching */
         }
         
+        /* Style the overlay container */
+        .overlay-container {
+            position: relative;
+        }
+
         /* Updated styles for the footer */
         .footer {
             width: 100%;
@@ -202,51 +207,54 @@
         </div>
     </section>
     
-    <!-- Practical Works Section -->
-    <section id="practical-works">
-        <h2>Practical Works</h2>
-        <ul>
-            <li>
-                <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
-            </li>
-            <li>
-                <a href="practical-work2.html">Practical Work 2</a>
-                <p>[Brief Description]</p>
-            </li>
-        </ul>
-    </section>
+   <div class="overlay-container">
+        <!-- Practical Works Section -->
+        <section id="practical-works">
+            <h2>Practical Works</h2>
+            <ul>
+                <li>
+                    <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+                </li>
+                <li>
+                    <a href="practical-work2.html">Practical Work 2</a>
+                    <p>[Brief Description]</p>
+                </li>
+            </ul>
+        </section>
 
-    <!-- Laboratory Classes Section -->
-    <section id="laboratory-classes">
-        <h2>Laboratory Classes</h2>
-        <ul>
-            <li>
-                <a href="/kiyb/task1.html">Laboratory Task 1</a>
-                <p>[Brief Description]</p>
-            </li>
-            <li>
-                <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
-                <p>[Brief Description]</p>
-            </li>
-            <li>
-                <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
-                <p>[Brief Description]</p>
-            </li>
-            <li>
-                <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
-                <p>[Brief Description]</p>
-            </li>
-        </ul>
-    </section>
-    <!-- Footer Section -->
-    <div class="footer">
-        <div class="footer-child"></div>
-        <img class="fb-icon" alt="" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" />
-        <img class="linkedin-icon" alt="" src="https://w7.pngwing.com/pngs/676/231/png-transparent-reddit-social-media-internet-news-social-media-iconez-icon.png" />
-        <img class="group-icon" alt="" src="https://d2xo500swnpgl1.cloudfront.net/uploads/roblox/Roblox-Tilt-Primary-1--79c6a905-f484-4d35-9675-0ccd03548cc5-1680045036103.png" />
-        <img class="insta-icon" alt="" src="https://cdn.iconscout.com/icon/free/png-256/free-steam-2288551-1933796.png" />
-        <div class="copyright-2020-all">
-            Copyright ©2023 All rights reserved
+        <!-- Laboratory Classes Section -->
+        <section id="laboratory-classes">
+            <h2>Laboratory Classes</h2>
+            <ul>
+                <li>
+                    <a href="/kiyb/task1.html">Laboratory Task 1</a>
+                    <p>[Brief Description]</p>
+                </li>
+                <li>
+                    <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                    <p>[Brief Description]</p>
+                </li>
+                <li>
+                    <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                    <p>[Brief Description]</p>
+                </li>
+                <li>
+                    <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                    <p>[Brief Description]</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Footer Section -->
+        <div class="footer">
+            <div class="footer-child"></div>
+            <img class="fb-icon" alt="" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" />
+            <img class="linkedin-icon" alt="" src="https://w7.pngwing.com/pngs/676/231/png-transparent-reddit-social-media-internet-news-social-media-iconez-icon.png" />
+            <img class="group-icon" alt="" src="https://d2xo500swnpgl1.cloudfront.net/uploads/roblox/Roblox-Tilt-Primary-1--79c6a905-f484-4d35-9675-0ccd03548cc5-1680045036103.png" />
+            <img class="insta-icon" alt="" src="https://cdn.iconscout.com/icon/free/png-256/free-steam-2288551-1933796.png" />
+            <div class="copyright-2020-all">
+                Copyright ©2023 All rights reserved
+            </div>
         </div>
     </div>
 </body>
