--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@
             height: 30px;
             margin: 0 10px;
         }
+
+        /* Add more styles for other classes and elements as needed */
+
+        /* Adjusted styles for the categories */
+        #about-me,
+        #practical-works,
+        #laboratory-classes {
+            margin-top: 20px;
+        }
         /* Add more styles for other classes and elements as needed */
 
     </style>
@@ -180,7 +189,7 @@
 <body>
     <!-- Your existing HTML content goes here -->
 
-    <!-- Navigation Menu -->
+     <!-- Navigation Menu -->
     <nav>
         <ul>
             <li><a href="#main">Main</a></li>
@@ -190,7 +199,7 @@
         </ul>
     </nav>
 
-   <!-- About Me Section -->
+    <!-- About Me Section -->
     <section id="about-me">
         <h2>About Me</h2>
         <div class="hi-i-am-container">
@@ -206,46 +215,46 @@
             veniam consequat sunt nostrud amet.
         </div>
     </section>
-    
-   <div class="overlay-container">
-        <!-- Practical Works Section -->
-        <section id="practical-works">
-            <h2>Practical Works</h2>
-            <ul>
-                <li>
-                    <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
-                </li>
-                <li>
-                    <a href="practical-work2.html">Practical Work 2</a>
-                    <p>[Brief Description]</p>
-                </li>
-            </ul>
-        </section>
 
-        <!-- Laboratory Classes Section -->
-        <section id="laboratory-classes">
-            <h2>Laboratory Classes</h2>
-            <ul>
-                <li>
-                    <a href="/kiyb/task1.html">Laboratory Task 1</a>
-                    <p>[Brief Description]</p>
-                </li>
-                <li>
-                    <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
-                    <p>[Brief Description]</p>
-                </li>
-                <li>
-                    <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
-                    <p>[Brief Description]</p>
-                </li>
-                <li>
-                    <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
-                    <p>[Brief Description]</p>
-                </li>
-            </ul>
-        </section>
+    <!-- Practical Works Section -->
+    <section id="practical-works">
+        <h2>Practical Works</h2>
+        <ul>
+            <li>
+                <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+            </li>
+            <li>
+                <a href="practical-work2.html">Practical Work 2</a>
+                <p>[Brief Description]</p>
+            </li>
+        </ul>
+    </section>
 
-        <!-- Footer Section -->
+    <!-- Laboratory Classes Section -->
+    <section id="laboratory-classes">
+        <h2>Laboratory Classes</h2>
+        <ul>
+            <li>
+                <a href="/kiyb/task1.html">Laboratory Task 1</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                <p>[Brief Description]</p>
+            </li>
+            <li>
+                <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                <p>[Brief Description]</p>
+            </li>
+        </ul>
+    </section>
+
+    <!-- Footer Section -->
+    <div class="overlay-container">
         <div class="footer">
             <div class="footer-child"></div>
             <img class="fb-icon" alt="" src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" />
