--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background-color: #f2f2f2;
             margin: 0;
             padding: 0;
+            text-align: center; /* Center-align text within the body */
         }
 
         /* Additional styles provided */
