--- a/index.html
+++ b/index.html
@@ -183,6 +183,25 @@
             text-align: center;
             margin-top: 20px;
         }
+        
+        .button-link {
+            position: absolute;
+            top: 486px;
+            left: 168px;
+            font-size: var(--font-size-xl);
+            font-weight: 500;
+            display: inline-block;
+            background-color: #007BFF;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button-link:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -220,7 +239,7 @@
         <h2>Practical Works</h2>
         <ul>
             <li>
-                <a href="/kisyr/Practical_work_1.html">Practical Work 1</a>
+                <a class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
             </li>
             <li>
                 <a href="practical-work2.html">Practical Work 2</a>
