--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <a class="button-link" href="/kisyr/Practical_work_1.html">Practical Work 1</a>
             </li>
             <li>
-                <a href="practical-work2.html">Practical Work 2</a>
+                <a class="button-link" href="practical-work2.html">Practical Work 2</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
@@ -250,19 +250,19 @@
         <h2>Laboratory Classes</h2>
         <ul>
             <li>
-                <a href="/kiyb/task1.html">Laboratory Task 1</a>
+                <a class="button-link" href="/kiyb/task1.html">Laboratory Task 1</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
+                <a class="button-link" href="/kisyr/lab_task_2.html">Laboratory Task 2</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
+                <a class="button-link" href="/kisyr/lab_task_3.html">Laboratory Task 3</a>
                 <p>[Brief Description]</p>
             </li>
             <li>
-                <a href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
+                <a class="button-link" href="/kisyr/lab_task_4.html">Laboratory Task 4</a>
                 <p>[Brief Description]</p>
             </li>
         </ul>
